; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_blame.c_determine_line_heat.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_blame.c_determine_line_heat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i8* }
%struct.blame_entry = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.commit_info = type { i64 }

@colorfield_nr = common dso_local global i32 0, align 4
@colorfield = common dso_local global %struct.TYPE_4__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.blame_entry*, i8**)* @determine_line_heat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @determine_line_heat(%struct.blame_entry* %0, i8** %1) #0 {
  %3 = alloca %struct.blame_entry*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.commit_info, align 8
  store %struct.blame_entry* %0, %struct.blame_entry** %3, align 8
  store i8** %1, i8*** %4, align 8
  store i32 0, i32* %5, align 4
  %7 = load %struct.blame_entry*, %struct.blame_entry** %3, align 8
  %8 = getelementptr inbounds %struct.blame_entry, %struct.blame_entry* %7, i32 0, i32 0
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @get_commit_info(i32 %11, %struct.commit_info* %6, i32 1)
  br label %13

13:                                               ; preds = %29, %2
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @colorfield_nr, align 4
  %16 = icmp slt i32 %14, %15
  br i1 %16, label %17, label %27

17:                                               ; preds = %13
  %18 = getelementptr inbounds %struct.commit_info, %struct.commit_info* %6, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** @colorfield, align 8
  %21 = load i32, i32* %5, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp sgt i64 %19, %25
  br label %27

27:                                               ; preds = %17, %13
  %28 = phi i1 [ false, %13 ], [ %26, %17 ]
  br i1 %28, label %29, label %32

29:                                               ; preds = %27
  %30 = load i32, i32* %5, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %5, align 4
  br label %13

32:                                               ; preds = %27
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** @colorfield, align 8
  %34 = load i32, i32* %5, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i64 %35
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 1
  %38 = load i8*, i8** %37, align 8
  %39 = load i8**, i8*** %4, align 8
  store i8* %38, i8** %39, align 8
  ret void
}

declare dso_local i32 @get_commit_info(i32, %struct.commit_info*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
